--- a/index.html
+++ b/index.html
@@ -1,114 +1,96 @@
-## index.html
-
-
-```html
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Lost & Found — Hackathon</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Lost & Found — Hackathon</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="site-header">
-<h1>Lost & Found — Hackathon</h1>
-<p class="tagline">Report lost or found items. Built for quick demos.</p>
-</header>
+  <!-- Navigation -->
+  <nav class="navbar">
+    <div class="logo">🔎 Lost & Found</div>
+    <ul class="nav-links">
+      <li><a href="#report">Report</a></li>
+      <li><a href="#items">Items</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
+  </nav>
 
+  <!-- Hero Section -->
+  <header class="hero">
+    <h1>Lost & Found Portal</h1>
+    <p>Helping students and staff find their belongings quickly and easily.</p>
+    <a href="#report" class="cta-btn">Report an Item</a>
+  </header>
 
-<main class="container">
+  <main>
+    <!-- Report Section -->
+    <section id="report" class="form-section">
+      <h2>📌 Report an Item</h2>
+      <form id="itemForm">
+        <label>Type:
+          <select id="itemType">
+            <option value="lost">Lost</option>
+            <option value="found">Found</option>
+          </select>
+        </label>
+        <label>Title: <input type="text" id="title" required></label>
+        <label>Description: <input type="text" id="description"></label>
+        <label>Location: <input type="text" id="location"></label>
+        <label>Date: <input type="date" id="date"></label>
+        <label>Contact: <input type="text" id="contact"></label>
+        <label>Photo URL: <input type="url" id="photo"></label>
+        <button type="submit">Report</button>
+      </form>
+    </section>
 
+    <!-- Items Section -->
+    <section id="items" class="list-section">
+      <h2>📂 Reported Items</h2>
+      <div class="controls">
+        <input type="text" id="searchBox" placeholder="Search items...">
+        <select id="filter">
+          <option value="all">All</option>
+          <option value="lost">Lost</option>
+          <option value="found">Found</option>
+          <option value="claimed">Claimed</option>
+        </select>
+      </div>
+      <div class="buttons">
+        <button id="exportBtn">Export JSON</button>
+        <input type="file" id="importFile" style="display:none;" />
+        <button id="importBtn">Import JSON</button>
+        <button id="resetBtn">Reset DB</button>
+      </div>
+      <div id="itemsList"></div>
+    </section>
 
-<section class="card" id="report-card" aria-labelledby="report-heading">
-<h2 id="report-heading">Report an item</h2>
-<form id="itemForm">
-<div class="row">
-<label for="type">Type</label>
-<select id="type" required>
-<option value="Lost">Lost</option>
-<option value="Found">Found</option>
-</select>
-</div>
+    <!-- About Section -->
+    <section id="about" class="about-section">
+      <h2>ℹ️ About This Project</h2>
+      <p>
+        This Lost & Found portal was built as part of a Hackathon project.  
+        It allows students and staff to report lost or found items, search through reports, 
+        and mark items as claimed once returned to their owners.  
+      </p>
+    </section>
+  </main>
 
-<div class="row">
-<label for="title">Title</label>
-<input id="title" type="text" placeholder="e.g. Black Wallet" required>
-</div>
+  <!-- Footer -->
+  <footer>
+    <p>Made with ❤️ at Smart India Hackathon 2025</p>
+  </footer>
 
-
-<div class="row">
-<label for="desc">Description</label>
-<textarea id="desc" rows="3" placeholder="Short description"></textarea>
-</div>
-
-<div class="row">
-<label for="location">Location</label>
-<input id="location" type="text" placeholder="e.g. Library, 2nd floor">
-</div>
-
-<div class="row">
-<label for="date">Date</label>
-<input id="date" type="date">
-</div>
-
-
-<div class="row">
-<label for="contact">Contact (phone or email)</label>
-<input id="contact" type="text" placeholder="Your phone or email">
-</div>
-
-
-<div class="row">
-<label for="photo">Photo URL (optional)</label>
-<input id="photo" type="url" placeholder="https://...">
-</div>
-
-
-<div class="actions">
-<button type="submit" class="btn">Report</button>
-<button type="button" id="clearForm" class="btn ghost">Clear</button>
-</div>
+  <script src="app.js"></script>
+<!-- Report Section -->
+<h2>Report an Issue</h2>
+<form id="reportForm">
+  <input type="text" id="reportTitle" placeholder="What are you reporting?" required><br>
+  <textarea id="reportDescription" placeholder="Describe the issue..." required></textarea><br>
+  <input type="text" id="reportContact" placeholder="Your email (optional)"><br>
+  <button type="submit">Submit Report</button>
 </form>
-</section>
 
-<section class="card" id="controls-card">
-<div class="controls-row">
-<input id="searchInput" type="search" placeholder="Search title, location, contact..." aria-label="Search items">
-<select id="filterSelect" aria-label="Filter by type">
-<option value="all">All</option>
-<option value="Lost">Lost</option>
-<option value="Found">Found</option>
-<option value="claimed">Claimed</option>
-</select>
-<button id="exportBtn" class="btn small">Export JSON</button>
-<input id="importFile" type="file" accept="application/json" style="display:none">
-<button id="importBtn" class="btn small ghost">Import JSON</button>
-<button id="resetAll" class="btn small danger">Reset DB</button>
-</div>
-</section>
-
-
-<section class="lists" id="lists">
-<div class="list card" id="lostListCard">
-<h3>Lost items</h3>
-<ul id="lostList" class="item-list" aria-live="polite"></ul>
-</div>
-<div class="list card" id="foundListCard">
-<h3>Found items</h3>
-<ul id="foundList" class="item-list" aria-live="polite"></ul>
-</div>
-</section>
-
-
-</main>
-
-
-<footer class="site-footer">
-<small>Demo for Hackathon — press export to show persistence. Built with HTML/CSS/JS.</small>
-</footer>
-
-
-<script src="app.js"></script>
 </body>
 </html>
