--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>Made with ❤️ at Smart India Hackathon 2025</p>
+    <p>Made with ❤️ by DYNAMIC DYNAMOS</p>
   </footer>
 
   <script src="app.js"></script>
@@ -94,3 +94,4 @@
 
 </body>
 </html>
+
