--- a/index.html
+++ b/index.html
@@ -1,38 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Lost & Found — Hackathon</title>
+  <meta charset="UTF-8">
+  <title>Lost & Found Portal</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Navigation -->
+  <!-- NAVBAR -->
   <nav class="navbar">
-    <div class="logo">🔎 Lost & Found</div>
+    <div class="logo">Lost & Found</div>
     <ul class="nav-links">
-      <li><a href="#report">Report</a></li>
-      <li><a href="#items">Items</a></li>
-      <li><a href="#about">About</a></li>
+      <li><a href="#formSection">Add Item</a></li>
+      <li><a href="#lostFound">Items</a></li>
+      <li><a href="#reported">Reported</a></li>
     </ul>
   </nav>
 
-  <!-- Hero Section -->
-  <header class="hero">
-    <h1>Lost & Found Portal</h1>
-    <p>Helping students and staff find their belongings quickly and easily.</p>
-    <a href="#report" class="cta-btn">Report an Item</a>
-  </header>
+  <!-- HERO -->
+  <section class="hero">
+    <h1>Lost something? Found something?</h1>
+    <p>Report or search lost and found items easily.</p>
+    <a href="#formSection" class="cta-btn">Report Now</a>
+  </section>
 
   <main>
-    <!-- Report Section -->
-    <section id="report" class="form-section">
-      <h2>📌 Report an Item</h2>
+    <!-- FORM -->
+    <section id="formSection" class="form-section">
+      <h2>Add Item</h2>
       <form id="itemForm">
         <label>Type:
           <select id="itemType">
-            <option value="lost">Lost</option>
-            <option value="found">Found</option>
+            <option value="Lost">Lost</option>
+            <option value="Found">Found</option>
           </select>
         </label>
         <label>Title: <input type="text" id="title" required></label>
@@ -40,58 +39,59 @@
         <label>Location: <input type="text" id="location"></label>
         <label>Date: <input type="date" id="date"></label>
         <label>Contact: <input type="text" id="contact"></label>
-        <label>Photo URL: <input type="url" id="photo"></label>
-        <button type="submit">Report</button>
+        <label>Photo URL: <input type="text" id="photo"></label>
+        <button type="submit">Add Item</button>
+        <button type="button" id="clearForm">Clear</button>
       </form>
     </section>
 
-    <!-- Items Section -->
-    <section id="items" class="list-section">
-      <h2>📂 Reported Items</h2>
+    <!-- LOST/FOUND LIST -->
+    <section id="lostFound" class="list-section">
+      <h2>Lost & Found Items</h2>
       <div class="controls">
-        <input type="text" id="searchBox" placeholder="Search items...">
-        <select id="filter">
+        <input type="text" id="searchInput" placeholder="Search items...">
+        <select id="filterSelect">
           <option value="all">All</option>
-          <option value="lost">Lost</option>
-          <option value="found">Found</option>
+          <option value="Lost">Lost</option>
+          <option value="Found">Found</option>
           <option value="claimed">Claimed</option>
         </select>
       </div>
       <div class="buttons">
-        <button id="exportBtn">Export JSON</button>
-        <input type="file" id="importFile" style="display:none;" />
-        <button id="importBtn">Import JSON</button>
-        <button id="resetBtn">Reset DB</button>
+        <button id="exportBtn">Export</button>
+        <button id="importBtn">Import</button>
+        <input type="file" id="importFile" hidden>
+        <button id="resetAll">Reset</button>
       </div>
-      <div id="itemsList"></div>
+
+      <h3>Lost Items</h3>
+      <ul id="lostList"></ul>
+
+      <h3>Found Items</h3>
+      <ul id="foundList"></ul>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="about-section">
-      <h2>ℹ️ About This Project</h2>
-      <p>
-        This Lost & Found portal was built as part of a Hackathon project.  
-        It allows students and staff to report lost or found items, search through reports, 
-        and mark items as claimed once returned to their owners.  
-      </p>
+    <!-- REPORTED SECTION -->
+    <section id="reported" class="list-section">
+      <h2>Reported Items</h2>
+      <ul id="reportedList"></ul>
+    </section>
+
+    <!-- ABOUT -->
+    <section class="about-section">
+      <h2>About</h2>
+      <p>This portal helps students report and track lost & found items on campus. 
+         Submit details and help reunite items with their owners.</p>
     </section>
   </main>
 
-  <!-- Footer -->
+  <!-- FOOTER -->
   <footer>
-    <p>Made with ❤️ by DYNAMIC DYNAMOS</p>
+    <p>&copy; Made with ❤️ by DYNAMIC DYNAMOS</p>
   </footer>
 
   <script src="app.js"></script>
-<!-- Report Section -->
-<h2>Report an Issue</h2>
-<form id="reportForm">
-  <input type="text" id="reportTitle" placeholder="What are you reporting?" required><br>
-  <textarea id="reportDescription" placeholder="Describe the issue..." required></textarea><br>
-  <input type="text" id="reportContact" placeholder="Your email (optional)"><br>
-  <button type="submit">Submit Report</button>
-</form>
-
 </body>
 </html>
+
 
