--- a/index.html
+++ b/index.html
@@ -4,6 +4,31 @@
   <meta charset="UTF-8">
   <title>Lost & Found Portal</title>
   <link rel="stylesheet" href="styles.css">
+
+  <!-- ✅ Firebase SDKs -->
+  <script type="module">
+    // Import Firebase
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+
+    // Your Firebase config
+    const firebaseConfig = {
+      apiKey: "AIzaSyAosHCiVohUlnyPd9FRsgW5gccl21hBlvA",
+      authDomain: "lost-and-found-56582.firebaseapp.com",
+      projectId: "lost-and-found-56582",
+      storageBucket: "lost-and-found-56582.firebasestorage.app",
+      messagingSenderId: "508496273757",
+      appId: "1:508496273757:web:a3b3fa91d03bf77e0c48b4",
+      measurementId: "G-4Y29L5QEGV"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    // Expose db globally so app.js can use it
+    window.db = db;
+  </script>
 </head>
 <body>
   <!-- NAVBAR -->
@@ -30,8 +55,8 @@
       <form id="itemForm">
         <label>Type:
           <select id="itemType">
-            <option value="Lost">Lost</option>
-            <option value="Found">Found</option>
+            <option value="lost">Lost</option>
+            <option value="found">Found</option>
           </select>
         </label>
         <label>Title: <input type="text" id="title" required></label>
@@ -52,8 +77,8 @@
         <input type="text" id="searchInput" placeholder="Search items...">
         <select id="filterSelect">
           <option value="all">All</option>
-          <option value="Lost">Lost</option>
-          <option value="Found">Found</option>
+          <option value="lost">Lost</option>
+          <option value="found">Found</option>
           <option value="claimed">Claimed</option>
         </select>
       </div>
@@ -89,6 +114,7 @@
   <footer>
     <p>&copy; Made with ❤️ by DYNAMIC DYNAMOS</p>
   </footer>
+
   
 <!-- ✅ Firebase SDKs (from CDN) -->
 <script type="module">
@@ -118,6 +144,7 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
