--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <div class="auth-bar">
+  <span id="userInfo">Not logged in</span>
+  <button id="loginBtn">Login with Google</button>
+  <button id="logoutBtn" style="display:none;">Logout</button>
+</div>
+
   <meta charset="UTF-8">
   <title>Lost & Found Portal</title>
   <link rel="stylesheet" href="styles.css">
@@ -144,6 +150,7 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
