--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
   <meta charset="UTF-8">
   <title>Lost & Found Portal</title>
   <link rel="stylesheet" href="styles.css">
@@ -11,6 +10,7 @@
     // Import Firebase
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
     import { getFirestore } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+    import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
     // Your Firebase config
     const firebaseConfig = {
@@ -26,9 +26,42 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
+    const auth = getAuth(app);
+    const provider = new GoogleAuthProvider();
 
-    // Expose db globally so app.js can use it
+    // Expose globally
     window.db = db;
+    window.auth = auth;
+
+    // ✅ Login / Logout handlers
+    window.login = async () => {
+      try {
+        await signInWithPopup(auth, provider);
+      } catch (err) {
+        alert("Login failed: " + err.message);
+      }
+    };
+
+    window.logout = async () => {
+      await signOut(auth);
+    };
+
+    // ✅ Auth state change
+    onAuthStateChanged(auth, (user) => {
+      const loginBtn = document.getElementById("loginBtn");
+      const logoutBtn = document.getElementById("logoutBtn");
+      const userInfo = document.getElementById("userInfo");
+
+      if (user) {
+        loginBtn.style.display = "none";
+        logoutBtn.style.display = "inline-block";
+        userInfo.textContent = "Logged in as: " + user.email;
+      } else {
+        loginBtn.style.display = "inline-block";
+        logoutBtn.style.display = "none";
+        userInfo.textContent = "";
+      }
+    });
   </script>
 </head>
 <body>
@@ -40,6 +73,11 @@
       <li><a href="#lostFound">Items</a></li>
       <li><a href="#reported">Reported</a></li>
     </ul>
+    <div class="auth-controls">
+      <span id="userInfo"></span>
+      <button id="loginBtn" onclick="login()">Login with Google</button>
+      <button id="logoutBtn" onclick="logout()" style="display:none;">Logout</button>
+    </div>
   </nav>
 
   <!-- HERO -->
@@ -116,36 +154,10 @@
     <p>&copy; Made with ❤️ by DYNAMIC DYNAMOS</p>
   </footer>
 
-  
-<!-- ✅ Firebase SDKs (from CDN) -->
-<script type="module">
-  // Import Firebase libraries
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-  import { getFirestore } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
-
-  // 🔹 Your Firebase config
-  const firebaseConfig = {
-    apiKey: "AIzaSyAosHCiVohUlnyPd9FRsgW5gccl21hBlvA",
-    authDomain: "lost-and-found-56582.firebaseapp.com",
-    projectId: "lost-and-found-56582",
-    storageBucket: "lost-and-found-56582.firebasestorage.app",
-    messagingSenderId: "508496273757",
-    appId: "1:508496273757:web:a3b3fa91d03bf77e0c48b4",
-    measurementId: "G-4Y29L5QEGV"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  window.db = getFirestore(app); // 🔹 make db accessible in app.js
-</script>
-
-<!-- ✅ Your app code (must also be module now) -->
-<script type="module" src="app.js"></script>
-
-  <script src="app.js"></script>
+  <!-- ✅ Your app code -->
+  <script type="module" src="app.js"></script>
 </body>
 </html>
-
 
 
 
