--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     import { getFirestore } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
     import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
-    // 🔹 Your Firebase Config
     const firebaseConfig = {
       apiKey: "AIzaSyAosHCiVohUlnyPd9FRsgW5gccl21hBlvA",
       authDomain: "lost-and-found-56582.firebaseapp.com",
@@ -22,13 +21,11 @@
       measurementId: "G-4Y29L5QEGV"
     };
 
-    // 🔹 Init Firebase
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
     const auth = getAuth(app);
     const provider = new GoogleAuthProvider();
 
-    // Expose globally so app.js can use
     window.db = db;
     window.auth = auth;
     window.provider = provider;
@@ -38,99 +35,109 @@
   </script>
 </head>
 <body>
-  <!-- NAVBAR -->
-  <nav class="navbar">
-    <div class="logo">Lost & Found</div>
-    <ul class="nav-links">
-      <li><a href="#formSection">Add Item</a></li>
-      <li><a href="#lostFound">Items</a></li>
-      <li><a href="#reported">Reported</a></li>
-    </ul>
-    <div class="auth-controls">
-      <span id="userInfo"></span>
-      <button id="loginBtn">Login with Google</button>
-      <button id="logoutBtn" style="display:none;">Logout</button>
-    </div>
-  </nav>
-
-  <!-- HERO -->
-  <section class="hero">
-    <h1>Lost something? Found something?</h1>
-    <p>Report or search lost and found items easily.</p>
-    <a href="#formSection" class="cta-btn">Report Now</a>
+  <!-- 🔹 LOGIN SCREEN -->
+  <section id="loginScreen" class="login-screen">
+    <h1>Welcome to Lost & Found Portal</h1>
+    <p>Please login to continue</p>
+    <button id="loginBtnBig">Login with Google</button>
   </section>
 
-  <main>
-    <!-- FORM -->
-    <section id="formSection" class="form-section">
-      <h2>Add Item</h2>
-      <form id="itemForm">
-        <label>Type:
-          <select id="itemType">
+  <!-- 🔹 MAIN CONTENT (HIDDEN UNTIL LOGIN) -->
+  <div id="mainContent" style="display:none;">
+    <!-- NAVBAR -->
+    <nav class="navbar">
+      <div class="logo">Lost & Found</div>
+      <ul class="nav-links">
+        <li><a href="#formSection">Add Item</a></li>
+        <li><a href="#lostFound">Items</a></li>
+        <li><a href="#reported">Reported</a></li>
+      </ul>
+      <div class="auth-controls">
+        <span id="userInfo"></span>
+        <button id="logoutBtn">Logout</button>
+      </div>
+    </nav>
+
+    <!-- HERO -->
+    <section class="hero">
+      <h1>Lost something? Found something?</h1>
+      <p>Report or search lost and found items easily.</p>
+      <a href="#formSection" class="cta-btn">Report Now</a>
+    </section>
+
+    <main>
+      <!-- FORM -->
+      <section id="formSection" class="form-section">
+        <h2>Add Item</h2>
+        <form id="itemForm">
+          <label>Type:
+            <select id="itemType">
+              <option value="lost">Lost</option>
+              <option value="found">Found</option>
+            </select>
+          </label>
+          <label>Title: <input type="text" id="title" required></label>
+          <label>Description: <input type="text" id="description"></label>
+          <label>Location: <input type="text" id="location"></label>
+          <label>Date: <input type="date" id="date"></label>
+          <label>Contact: <input type="text" id="contact"></label>
+          <label>Photo URL: <input type="text" id="photo"></label>
+          <button type="submit">Add Item</button>
+          <button type="button" id="clearForm">Clear</button>
+        </form>
+      </section>
+
+      <!-- LOST/FOUND LIST -->
+      <section id="lostFound" class="list-section">
+        <h2>Lost & Found Items</h2>
+        <div class="controls">
+          <input type="text" id="searchInput" placeholder="Search items...">
+          <select id="filterSelect">
+            <option value="all">All</option>
             <option value="lost">Lost</option>
             <option value="found">Found</option>
+            <option value="claimed">Claimed</option>
           </select>
-        </label>
-        <label>Title: <input type="text" id="title" required></label>
-        <label>Description: <input type="text" id="description"></label>
-        <label>Location: <input type="text" id="location"></label>
-        <label>Date: <input type="date" id="date"></label>
-        <label>Contact: <input type="text" id="contact"></label>
-        <label>Photo URL: <input type="text" id="photo"></label>
-        <button type="submit">Add Item</button>
-        <button type="button" id="clearForm">Clear</button>
-      </form>
-    </section>
+        </div>
+        <div class="buttons">
+          <button id="exportBtn">Export</button>
+          <button id="importBtn">Import</button>
+          <input type="file" id="importFile" hidden>
+          <button id="resetAll">Reset</button>
+        </div>
 
-    <!-- LOST/FOUND LIST -->
-    <section id="lostFound" class="list-section">
-      <h2>Lost & Found Items</h2>
-      <div class="controls">
-        <input type="text" id="searchInput" placeholder="Search items...">
-        <select id="filterSelect">
-          <option value="all">All</option>
-          <option value="lost">Lost</option>
-          <option value="found">Found</option>
-          <option value="claimed">Claimed</option>
-        </select>
-      </div>
-      <div class="buttons">
-        <button id="exportBtn">Export</button>
-        <button id="importBtn">Import</button>
-        <input type="file" id="importFile" hidden>
-        <button id="resetAll">Reset</button>
-      </div>
+        <h3>Lost Items</h3>
+        <ul id="lostList"></ul>
 
-      <h3>Lost Items</h3>
-      <ul id="lostList"></ul>
+        <h3>Found Items</h3>
+        <ul id="foundList"></ul>
+      </section>
 
-      <h3>Found Items</h3>
-      <ul id="foundList"></ul>
-    </section>
+      <!-- REPORTED SECTION -->
+      <section id="reported" class="list-section">
+        <h2>Reported Items</h2>
+        <ul id="reportedList"></ul>
+      </section>
 
-    <!-- REPORTED SECTION -->
-    <section id="reported" class="list-section">
-      <h2>Reported Items</h2>
-      <ul id="reportedList"></ul>
-    </section>
+      <!-- ABOUT -->
+      <section class="about-section">
+        <h2>About</h2>
+        <p>This portal helps students report and track lost & found items on campus. 
+           Submit details and help reunite items with their owners.</p>
+      </section>
+    </main>
 
-    <!-- ABOUT -->
-    <section class="about-section">
-      <h2>About</h2>
-      <p>This portal helps students report and track lost & found items on campus. 
-         Submit details and help reunite items with their owners.</p>
-    </section>
-  </main>
-
-  <!-- FOOTER -->
-  <footer>
-    <p>&copy; Made with ❤️ by DYNAMIC DYNAMOS</p>
-  </footer>
+    <!-- FOOTER -->
+    <footer>
+      <p>&copy; Made with ❤️ by DYNAMIC DYNAMOS</p>
+    </footer>
+  </div>
 
   <!-- ✅ App Logic -->
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
