--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
 </head>
 <body>
   <!-- 🔹 LOGIN SCREEN -->
-  <section id="loginScreen" class="login-screen">
-    <h1>Welcome to Lost & Found Portal</h1>
+<!-- 🔹 LOGIN SCREEN -->
+<section id="loginScreen" class="login-screen">
+  <div class="login-card">
+    <h1>🔑 Lost & Found Portal</h1>
     <p>Please login to continue</p>
     <button id="loginBtnBig">Login with Google</button>
-  </section>
+  </div>
+</section>
 
   <!-- 🔹 MAIN CONTENT (HIDDEN UNTIL LOGIN) -->
   <div id="mainContent" style="display:none;">
@@ -137,6 +140,7 @@
   <script type="module" src="app.js"></script>
 </body>
 </html>
+
 
 
 
